icmake (7.12.1) (TODO)

  * updated icmake's release year to 1992-2009.

  * main()-frame now contains commented-out code to use Bobcat's Arg class to
    handle command line arguments

  * library construction now contains code to create a shared library as a
    new option that can be specified in icmconf

  * the top-level directory has been organized. See INSTALL and QUICKINSTALL
    for details. Full construction using bootstrap.sh is now based on the
    assumption that icmake hasn't been installed. To install parts given an
    icmake installation the various subdirectories have build-scripts assuming
    an icmake installation under /usr/bin and /usr/lib/icmake/

  * added `where-is-what' giving an overview of what the various top-level
    files and directories are for.

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Tue, 10 Feb 2009 16:49:10 +0100

icmake (7.11.1)

  * Introduced a three-digit version number: major, minor and subreleases.

  * Updated icmbuild sources to 2008.

  * The Gnu g++ flags for the upcoming c++0x standard are now mentioned in
    icmconf. 

icmake (7.11)

  * Fixed missing dead[0] initialization in comp/icm-comp.c

    Fixed handling of C and C++ comment in strings in icm-pp: The preprocessor
    now keeps C/C++ comment in string/character constants in #defines allowing
    for constructions like #define PAT "dir/*" which in earlier versions
    resulted in an unterminated C comment error.

    The icmstart and icmbuild scripts are now bisonc++ >= 2.0.0 aware, and
    grambuild is now effectively superfluous (but still available)

    Added #define EXTENSION to def/destinations to allow easy compilation in
    cygwin environments

    The script icmscripts.sh can be used to recreate the icm-scripts in the
    bin/ subdirectory. Primarily useful for maintenance.

    The 'unix' script no longer by default constructs stripped versions of the
    binary programs, the install.sh by default installs unstripped