@@ -2,8 +2,7 @@
 
 PROJECT=icmake
 
-VERSION=`grep VERSION icmake/VERSION | 
-  sed 's/[[:space:]]*#define[[:space:]]\+VERSION[[:space:]]\+"\(.*\)".*/\1/'`
+. icmake/VERSION
 
 DISTRIBUTION=${PROJECT}-${VERSION}      # define the distribution's dir name
 
@@ -17,11 +16,11 @@ tgz()
 }
 
 case "$1" in 
-    (o)
+    (d)
         tgz ${HOME}/debian/${PROJECT}/tarballs/${PROJECT}_${VERSION}.orig.tar.gz
     ;;
 
-    (t|u)
+    (l|u)
         tgz ${PROJECT}_${VERSION}.tar.gz
 
         if [ "$1" == "u" ]
@@ -34,10 +33,10 @@ case "$1" in
     (*)
         echo "
 Provide arg:
-    o (orig.tar.gz) to create a local .orig.tar.gz archive in 
-                    ../debian/${PROJECT}/tarballs
-    t (tar.gz)      to create ${PROJECT}_${VERSION}.tar.gz in this directory
-    u (upload)      same as 't', but upload to oosix and show MD5 hash
+    d (debian)  to create a local .orig.tar.gz archive in 
+                ../debian/${PROJECT}/tarballs
+    l (local)   to create ${PROJECT}_${VERSION}.tar.gz in this directory
+    u (upload)  same as 'l', but upload to oosix and show MD5 hash
 "
     exit 1
     ;;
